implemet the payment system